--- a/index.html
+++ b/index.html
@@ -12,116 +12,172 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid header_div">
-            <img class="nav_bar_logo mx-4" src="https://i03.appmifile.com/i18n/scm/favicon.png" alt="mi logo">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" aria-current="page" href="#">Store</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Phones</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Tablets</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">TV & Smart Home</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Smart Watch & Audio</a>
-                    </li>
-                </ul>
-                <span class="navbar-text pe-5">
-                    Discover
-                </span>
-                <span class="navbar-text pe-5">
-                    Support
-                </span>
-                <span class="navbar-text pe-5">
-                    <a class="nav-link-icon" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                            class="bi bi-search" viewBox="0 0 16 16">
-                            <path
-                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
-                        </svg>
-                    </a>
-                </span>
-                <span class="navbar-text pe-5">
-                    <a class="nav-link-icon" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                            class="bi bi-cart" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                        </svg>
-                    </a>
-                </span>
-                <span class="navbar-text pe-5">
-                    <a class="nav-link-icon" href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                            class="bi bi-person" viewBox="0 0 16 16">
-                            <path
-                                d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
-                        </svg>
-                    </a>
-                </span>
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid header_div">
+                <img class="nav_bar_logo mx-4" src="https://i03.appmifile.com/i18n/scm/favicon.png" alt="mi logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" aria-current="page" href="#">Store</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">Phones</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">Tablets</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">TV & Smart Home</a>
+                        </li>
+                        <li class="nav-item mx-3">
+                            <a class="nav-link" href="#">Smart Watch & Audio</a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text pe-5">
+                        Discover
+                    </span>
+                    <span class="navbar-text pe-5">
+                        Support
+                    </span>
+                    <span class="navbar-text pe-5">
+                        <a class="nav-link-icon" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                            </svg>
+                        </a>
+                    </span>
+                    <span class="navbar-text pe-5">
+                        <a class="nav-link-icon" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-cart" viewBox="0 0 16 16">
+                                <path
+                                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                            </svg>
+                        </a>
+                    </span>
+                    <span class="navbar-text pe-5">
+                        <a class="nav-link-icon" href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                class="bi bi-person" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                            </svg>
+                        </a>
+                    </span>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <!--carousel-->
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active "
                 aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./images/2100nits.png" class="slide_image d-block w-100" alt="...">
+                <img class="nav_img" src="./images/2100nits.png" class="d-block w-100" alt="Nav_img">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./images/buds.png" class="slide_image d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="./images/car tab.jpg" class="slide_image d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
-            </div>
+                    <h3>Redmi Note 14 5G</h3>
+                    <p>Brightest AMOLED Display <br>
+                        Starting at ₹17,999*</p>
+                        <button class="bg-white rounded-3 carousel_learn_more"><a class="text-decoration-none text-dark" href="#">Learn more</a></button>
 
+                  </div>
+            </div>
+            <div class="carousel-item">
+                <img class="nav_img" src="./images/buds.png" class="d-block w-100" alt="Nav_img">
+                <div class="carousel-caption text-dark d-none d-md-block">
+                    <h3>Redmi Buds 6 </h3>
+                    <p>Silence The Noise With 49dB ANC<br>
+                        Only at ₹2,799</p>
+                        <button class="bg-black rounded-3 carousel_learn_more"><a class="text-decoration-none text-light" href="#">Learn more</a></button>
+                  </div>
+            </div>
+            <div class="carousel-item">
+                <img class="nav_img" src="./images/car tab.jpg" class="d-block w-100" alt="Nav_img">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Xiaomi Pad 7</h3>
+                    <p>The Wait is Over - Sale is Live <br>
+                        Starting at ₹26,999*</p>
+                        <button class="bg-white rounded-3 carousel_learn_more"><a class="text-decoration-none text-dark" href="#">Learn more</a></button>
+
+                  </div>
+            </div>
+            <div class="carousel-item ">
+                <img class="nav_img" src="./images/rdmi5g.png" class="d-block w-100" alt="Nav_img">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Redmi Note 14 Pro+ 5G</h3>
+                    <p>Segment's Only Durability Combination <br>
+                        Starting at ₹29,999*</p>
+                        <button class="bg-white rounded-3 carousel_learn_more"><a class="text-decoration-none text-dark" href="#">Learn more</a></button>
+
+                  </div>
+            </div>
+            <div class="carousel-item">
+                <img class="nav_img" src="./images/redmi violet.png" class="d-block w-100" alt="Nav_img">
+                <div class="carousel-caption text-dark d-none d-md-block">
+                    <h3>Redmi Note 14 Pro 5G</h3>
+                    <p>3000 nits Curved AMOLED <br>
+                        Starting at ₹23,999*</p>
+                        <button class="bg-black rounded-3 carousel_learn_more"><a class="text-decoration-none text-light" href="#">Learn more</a></button>
+
+                  </div>
+            
+            </div>
+            <div class="carousel-item">
+                <img class="nav_img" src="./images/speakers.png" class="d-block w-100" alt="Nav_img">
+                <div class="carousel-caption text-dark d-none d-md-block">
+                    <h3>Xiaomi Sound Outdoor Speaker</h3>
+                    <p>Big Speaker Energy <br>
+                        Back in Stock! Hurry Up</p>
+                        <button class="bg-black rounded-3 carousel_learn_more"><a class="text-decoration-none text-light" href="#">Learn more</a></button>
+
+                  </div>
+            </div>
+            <div class="carousel-item">
+                <img class="nav_img" src="./images/tv.png" class="d-block w-100 " alt="Nav_img">
+                <div class="carousel-caption text-dark d-none d-md-block">
+                    <h3>Xiaomi Smart TV X Pro <br> QLED Series </h3>
+                    <p>4K QLED Perfection—Feel the Vision
+                        Starting at ₹30,999*</p>
+                        <button class="bg-black rounded-3 carousel_learn_more"><a class="text-decoration-none text-light" href="#">Learn more</a></button>
+
+                  </div>
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
             data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="false"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
-
-
+    <!--Featured products-->
+    
     <!--bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
